compiler/testData/diagnostics/testsWithStdLib/typealias/exceptionTypeAliasesInvisibleWithApiVersion1_0.fir.kt
// !LANGUAGE: +TypeAliases
// !API_VERSION: 1.0
// FILE: test.kt
val fooException = <!NONE_APPLICABLE!>Exception<!>("foo")
val barException = kotlin.<!NONE_APPLICABLE!>Exception<!>("bar")
